--- a/Todo-app/public/css/style.css
+++ b/Todo-app/public/css/style.css
@@ -6,6 +6,10 @@
   background-color: #f0f0f0;
 }
 
+*::-webkit-scrollbar {  /* Chrome, Safari 対応 */
+  display:none;
+}
+
 .main{
     height: 90%
 }
@@ -21,6 +25,8 @@
     height: 100%;
     background-color: #bad8f5;
     border-radius: 10px;
+
+    overflow:scroll
    }
     
    .MainContent{
@@ -30,6 +36,8 @@
     height: 100%;
     background-color: #8fb1d1;
     border-radius: 10px;
+
+    overflow:scroll
    }
 
    /* Main側 */
@@ -64,89 +72,107 @@
   }
 
 
-   /* ======================================================== ホップアップ ==================================================================== */
-   .box {
-    width: 80%;
-    margin: 0 auto;
-    background: rgba(255,255,255,0.2);
-    padding: 35px;
-    border: 2px solid #fff;
-    border-radius: 20px/50px;
-    background-clip: padding-box;
-    text-align: center;
-  }
-
-  
-
-  
-  /* visibility:hidden＝ボックスを非表示にする */
-  .overlay {
-    z-index: 9999;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.7);
-    transition: opacity 500ms;
-    visibility: hidden;
-    opacity: 0;
-  }
-  
-  /* ◯◯:target = aタグが実行された場合◯◯クラスのCSSが発動する
-  /* visibility:visible=ボックスを表示 */
-  .overlay:target {
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  .content{
-    text-align:center;
-  }
-  
-  table{
-    margin:0 auto!important;
-  }
-  
-  .popup {
-    margin: 10px auto;
-    padding: 30px;
-    background: #fff;
-    border-radius: 5px;
-    width: 40%;
-    position: relative;
-  }
-  
-  .popup h2 {
-    margin-top: 0;
-    color: #333;
-    font-family: Tahoma, Arial, sans-serif;
-  }
-  .popup .close {
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    transition: all 200ms;
-    font-size: 30px;
-    font-weight: bold;
-    text-decoration: none;
-    color: #333;
-  }
-  
-  @media (max-width: 700px){
-    .box{
-      width: 90%;
-    }
-    .popup{
-      width: 90%;
-    }
-    .overlay{
-    font-size:12px;
-    }
-
-.popup2{
-  margin-top:  150px;
+  /* ===================================================モーダル遷移====================================================== */
+/* newproject.blade.php  */
+   .select_p {
+    margin-right: 1vh;
 }
 
-  /* ======================================================== ホップアップ ==================================================================== */
-  }
+.table_p{
+  text-align: center;
+}
+
+
+/* 閉じるボタン */
+.square_btn {
+  display: block;
+  position: relative;
+  width: 30px;
+  height: 30px;
+  border: 2px solid #333; /* 枠の調整 */
+  background: #fff; /* ボタンの背景色 */
+}
+ 
+.square_btn::before, .square_btn::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 3px; /* 棒の幅（太さ） */
+  height: 27px; /* 棒の高さ */
+  background: #333; /* バツ印の色 */
+}
+ 
+.square_btn::before {
+  transform: translate(-50%,-50%) rotate(45deg);
+}
+ 
+.square_btn::after {
+  transform: translate(-50%,-50%) rotate(-45deg);
+}
+
+.newproject_table{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color:rgb(41, 35, 35)
+}
+
+tr{
+margin: 30px;
+
+}
+td{
+padding-right: 10px;
+}
+
+
+
+
+
+/* ーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーモーダルCSSーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーー */
+/* モーダル全体(背景＋本体) */
+.modal{
+  display: none;
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+}
+
+/* モーダル背景 */
+.modal-bg{
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+/* モーダル本体 */
+.modal-content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: scroll; /* はみ出た部分はスクロールさせる */
+  height: 60%;/* これが無いと「overflow:scroll」が利かない */
+  width: 60%;/* これが無いと「overflow:scroll」が利かない */
+  background: white;
+  padding: 40px;
+
+  overflow:scroll
+}
+
+/* モーダルウィンドウ表示中に記事本体を固定 */
+body.fixed {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+}
+/* ーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーー */
+
+
+
+
