--- a/Todo-app/public/css/style.css
+++ b/Todo-app/public/css/style.css
@@ -21,7 +21,7 @@
    .SubContent{
     margin: 10px;
     float: left;
-    width: 27%;
+    width: 20%;
     height: 100%;
     background-color: #bad8f5;
     border-radius: 10px;
@@ -30,9 +30,9 @@
    }
     
    .MainContent{
-    margin: 10px 10px 10px 0;
+    margin: 10px 10px 10px auto;
     float: right;
-    width: 70%;
+    width: 78%;
     height: 100%;
     background-color: #8fb1d1;
     border-radius: 10px;
@@ -176,3 +176,14 @@ body.fixed {
 
 
 
+/* Sub画面のプロジェクト */
+
+.project_div{
+  background-color: bisque;
+  clear: both;
+  margin: 5px;
+  width:90% auto;
+  height: 7%;
+  border-radius: 5px;
+  
+}
