--- a/Todo-app/public/css/style.css
+++ b/Todo-app/public/css/style.css
@@ -41,6 +41,7 @@
    }
 
    /* Main側 */
+  
 
 
     /* Sub側 */
@@ -55,11 +56,14 @@
 
   .project_Day{
     clear: both;
-    
+    text-align: center;
+    width: 90%;
   }
 
   .pday_div{
     background-color: azure;
+    border-radius: 10px;
+    text-align: center;
   }
 
   .pday_h4{
@@ -187,3 +191,57 @@ body.fixed {
   border-radius: 5px;
   
 }
+
+/* ==================================================================タスク編集用============================================================= */
+/* .cp_iptxt {
+	position: relative;
+	width: 20%;
+	margin: 40px 3%;
+}
+.cp_iptxt input[type='text'] {
+	font: 15px/24px sans-serif;
+	box-sizing: border-box;
+	width: 100%;
+	letter-spacing: 1px;
+	padding-left: 4em;
+}
+.cp_iptxt input[type='text']:focus {
+	outline: none;
+}
+.ef {
+	padding: 4px 0;
+	border: 0;
+	border-bottom: 1px solid #1b2538;
+	background-color: transparent;
+}
+.ef ~ .focus_line {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 0;
+	height: 2px;
+	transition: 0.4s;
+	background-color: #da3c41;
+}
+.ef:focus ~ .focus_line,
+.cp_iptxt.ef ~ .focus_line {
+	width: 100%;
+	transition: 0.4s;
+}
+.ef ~ label {
+	position: absolute;
+	z-index: -1;
+	top: 4px;
+	left: 0;
+	width: 100%;
+	transition: 0.3s;
+	letter-spacing: 0.5px;
+	color: #b41818;
+}
+.ef:focus ~ label, .cp_iptxt.ef ~ label {
+	font-size: 12px;
+	top: -16px;
+	transition: 0.3s;
+	color: #da3c41;
+} */
+
