1/14　基本機能完了

--- a/Todo-app/public/css/style.css
+++ b/Todo-app/public/css/style.css
@@ -4,6 +4,7 @@
   html, body {
   height: 100%;
   background-color: #f0f0f0;
+  font-family: "UD デジタル 教科書体 NP-B","UD Digi Kyokasho NP-B";
 }
 
 *::-webkit-scrollbar {  /* Chrome, Safari 対応 */
@@ -46,7 +47,8 @@
 
     /* Sub側 */
   .P_button{
-    margin:10px;
+    margin:10px 60px 1px 10px;
+    padding: 10px 40px ;
     float:right;
   }
   .sub_h3{
@@ -54,18 +56,39 @@
     float:left;
   }
 
-  .project_Day{
+  .task_Day{
     clear: both;
     text-align: center;
-    width: 90%;
+    width: 80%;
+    margin:auto;
+    margin-bottom: 10px;
+  }
+  .tday_div{
+    padding: 50px 50px 0px 150px;
   }
 
-  .pday_div{
-    background-color: azure;
-    border-radius: 10px;
-    text-align: center;
+  .task_table{
+   padding: 20px;
   }
 
+  .task_tbody{
+    background-color: rgb(235, 113, 113);
+    padding: 10px;
+  }
+
+  .status_td{
+    background-color: antiquewhite;
+  }
+  .task_tr{
+    padding: 10px;
+  }
+  .task_td{
+    padding: 10px;
+  }
+  .task_th{
+
+  }
+  
   .pday_h4{
     margin-left: 20px;
     float:left
@@ -191,57 +214,4 @@ body.fixed {
   border-radius: 5px;
   
 }
-
-/* ==================================================================タスク編集用============================================================= */
-/* .cp_iptxt {
-	position: relative;
-	width: 20%;
-	margin: 40px 3%;
-}
-.cp_iptxt input[type='text'] {
-	font: 15px/24px sans-serif;
-	box-sizing: border-box;
-	width: 100%;
-	letter-spacing: 1px;
-	padding-left: 4em;
-}
-.cp_iptxt input[type='text']:focus {
-	outline: none;
-}
-.ef {
-	padding: 4px 0;
-	border: 0;
-	border-bottom: 1px solid #1b2538;
-	background-color: transparent;
-}
-.ef ~ .focus_line {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 0;
-	height: 2px;
-	transition: 0.4s;
-	background-color: #da3c41;
-}
-.ef:focus ~ .focus_line,
-.cp_iptxt.ef ~ .focus_line {
-	width: 100%;
-	transition: 0.4s;
-}
-.ef ~ label {
-	position: absolute;
-	z-index: -1;
-	top: 4px;
-	left: 0;
-	width: 100%;
-	transition: 0.3s;
-	letter-spacing: 0.5px;
-	color: #b41818;
-}
-.ef:focus ~ label, .cp_iptxt.ef ~ label {
-	font-size: 12px;
-	top: -16px;
-	transition: 0.3s;
-	color: #da3c41;
-} */
 
