--- a/Todo-app/public/css/style.css
+++ b/Todo-app/public/css/style.css
@@ -1,217 +1,310 @@
 @charset "utf-8";
 
-/* 全体 */
-  html, body {
-  height: 100%;
-  background-color: #f0f0f0;
-  font-family: "UD デジタル 教科書体 NP-B","UD Digi Kyokasho NP-B";
+/* ============================　全体　============================ */
+
+html,
+body {
+    height: 100%;
+    background-color: #f0f0f0;
 }
 
-*::-webkit-scrollbar {  /* Chrome, Safari 対応 */
-  display:none;
+.main {
+    width: 100%;
+    height: 100%;
 }
 
-.main{
-    height: 90%
+*::-webkit-scrollbar {
+    /* Chrome, Safari 対応 */
+    display: none;
 }
 
-.SubContent,.MainContent{
-    height: auto;
-   }
-    
-   .SubContent{
-    margin: 10px;
+
+/* ===================　SubContent　======================= */
+
+.SubContent {
+    /* margin: 10px; */
     float: left;
-    width: 20%;
-    height: 100%;
-    background-color: #bad8f5;
-    border-radius: 10px;
+    width: 15%;
+    height: 70%;
+    background-color: #e8e8eb;
+    border: solid #000000;
+    /* border-radius: 10px; */
+    overflow: scroll
+}
 
-    overflow:scroll
-   }
-    
-   .MainContent{
-    margin: 10px 10px 10px auto;
-    float: right;
-    width: 78%;
-    height: 100%;
-    background-color: #8fb1d1;
-    border-radius: 10px;
+.pdayform {
+    margin: auto auto 10px 50px;
+    clear: both;
+    padding: -10px auto;
+    font-size: large;
+}
 
-    overflow:scroll
-   }
-
-   /* Main側 */
-  
-
-
-    /* Sub側 */
-  .P_button{
-    margin:10px 60px 1px 10px;
-    padding: 10px 40px ;
-    float:right;
-  }
-  .sub_h3{
+.sub_h3 {
     margin: 15px;
-    float:left;
-  }
+    float: left;
+}
 
-  .task_Day{
+
+/* =================== MainContent ======================= */
+
+.MainContent {
+    /* margin: 10px 10px 10px auto; */
+    float: right;
+    width: 85%;
+    height: 70%;
+    background-color: #8fb1d1;
+    border: solid #000000;
+    /* border-radius: 10px; */
+    overflow: scroll
+}
+
+.pday_h4 {
+    margin-left: 20px;
+    float: left
+}
+
+.P-button {
+    margin-right: 30px;
+}
+
+
+/* タスク　div関連 */
+
+.tasks-div {
+    width: 40%;
+    padding: 20px;
+    margin: 30px 30px 30px 0;
+    background: sandybrown;
+    float: right;
+    border: solid rgb(0, 0, 0);
+    border-radius: 10px;
+}
+
+.status-label {
+    background: rgb(206, 67, 67);
+    padding: 15px 100px 5px 100px;
+    position: relative;
+    top: -30px;
+    left: -10px;
+    border: solid rgb(0, 0, 0);
+    color: white;
+    border-radius: 10px;
+}
+
+
+/* ===================　create-task-content　======================= */
+
+.create-task-content {
+    position: absolute;
+    top: 84.95%;
+    left: 57.5%;
+    transform: translate(-50%, -50%);
+    /* float: right; */
+    width: 85%;
+    height: 30%;
+    background-color: #a5a5a5;
+    border: solid #000000;
+}
+
+.task-detail-div {
+    float: right;
+    /* position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50, -50%); */
+}
+
+.create-task-form {
+    margin: 30px;
+}
+
+.task-detail-form {
+    float: right;
+    /* margin-left: 100px; */
+}
+
+
+/* ===================　create-project-content　======================= */
+
+.create-project-content {
+    float: left;
+    width: 15%;
+    height: 30%;
+    background-color: #8fb1d1;
+    border: solid #000000;
+}
+
+.p-small {
+    margin: 0 10px 0 10px;
+}
+
+.project-text {
+    margin: 0 0 10px 10px;
+}
+
+.task_Day {
     clear: both;
     text-align: center;
     width: 80%;
-    margin:auto;
+    margin: auto;
     margin-bottom: 10px;
-  }
-  .tday_div{
+}
+
+.tday_div {
     padding: 50px 50px 0px 150px;
-  }
+}
 
-  .task_table{
-   padding: 20px;
-  }
+.task_table {
+    padding: 20px;
+}
 
-  .task_tbody{
+.task_tbody {
     background-color: rgb(235, 113, 113);
     padding: 10px;
-  }
+}
 
-  .status_td{
+.status_td {
     background-color: antiquewhite;
-  }
-  .task_tr{
+}
+
+.task_tr {
     padding: 10px;
-  }
-  .task_td{
+}
+
+.task_td {
     padding: 10px;
-  }
-  .task_th{
-
-  }
-  
-  .pday_h4{
-    margin-left: 20px;
-    float:left
-  }
-
-  .pdayform{
-    float:right;
-  }
+}
 
 
-  /* ===================================================モーダル遷移====================================================== */
+/* ===================================================モーダル遷移====================================================== */
+
+
 /* newproject.blade.php  */
-   .select_p {
+
+.select_p {
     margin-right: 1vh;
 }
 
-.table_p{
-  text-align: center;
+.table_p {
+    text-align: center;
 }
 
 
 /* 閉じるボタン */
+
 .square_btn {
-  display: block;
-  position: relative;
-  width: 30px;
-  height: 30px;
-  border: 2px solid #333; /* 枠の調整 */
-  background: #fff; /* ボタンの背景色 */
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    border: 2px solid #333;
+    /* 枠の調整 */
+    background: #fff;
+    /* ボタンの背景色 */
 }
- 
-.square_btn::before, .square_btn::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 3px; /* 棒の幅（太さ） */
-  height: 27px; /* 棒の高さ */
-  background: #333; /* バツ印の色 */
-}
- 
-.square_btn::before {
-  transform: translate(-50%,-50%) rotate(45deg);
-}
- 
+
+.square_btn::before,
 .square_btn::after {
-  transform: translate(-50%,-50%) rotate(-45deg);
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 3px;
+    /* 棒の幅（太さ） */
+    height: 27px;
+    /* 棒の高さ */
+    background: #333;
+    /* バツ印の色 */
 }
 
-.newproject_table{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color:rgb(41, 35, 35)
+.square_btn::before {
+    transform: translate(-50%, -50%) rotate(45deg);
 }
 
-tr{
-margin: 30px;
-
-}
-td{
-padding-right: 10px;
+.square_btn::after {
+    transform: translate(-50%, -50%) rotate(-45deg);
 }
 
+.newproject_table {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(41, 35, 35)
+}
 
+tr {
+    margin: 30px;
+}
 
+td {
+    padding-right: 10px;
+}
 
 
 /* ーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーモーダルCSSーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーー */
+
+
 /* モーダル全体(背景＋本体) */
-.modal{
-  display: none;
-  position: fixed;
-  top: 0;
-  height: 100vh;
-  width: 100%;
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    height: 100vh;
+    width: 100%;
 }
+
 
 /* モーダル背景 */
-.modal-bg{
-  position: absolute;
-  height: 100vh;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.8);
+
+.modal-bg {
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.8);
 }
+
 
 /* モーダル本体 */
-.modal-content{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  overflow: scroll; /* はみ出た部分はスクロールさせる */
-  height: 60%;/* これが無いと「overflow:scroll」が利かない */
-  width: 60%;/* これが無いと「overflow:scroll」が利かない */
-  background: white;
-  padding: 40px;
 
-  overflow:scroll
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: scroll;
+    /* はみ出た部分はスクロールさせる */
+    height: 60%;
+    /* これが無いと「overflow:scroll」が利かない */
+    width: 60%;
+    /* これが無いと「overflow:scroll」が利かない */
+    background: white;
+    padding: 40px;
+    overflow: scroll
 }
+
 
 /* モーダルウィンドウ表示中に記事本体を固定 */
+
 body.fixed {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
 }
+
+
 /* ーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーー */
-
-
 
 
 /* Sub画面のプロジェクト */
 
-.project_div{
-  background-color: bisque;
-  clear: both;
-  margin: 5px;
-  width:90% auto;
-  height: 7%;
-  border-radius: 5px;
-  
+.project_div {
+    background-color: bisque;
+    clear: both;
+    margin: 5px;
+    width: 90% auto;
+    height: 7%;
+    border-radius: 5px;
 }
-
