--- a/Todo-app/public/css/style.css
+++ b/Todo-app/public/css/style.css
@@ -3,6 +3,7 @@
         
         html,
         body {
+            
             height: 100%;
             background-color: #f0f0f0;
         }
@@ -27,7 +28,7 @@
             float: left;
             width: 15%;
             height: 70%;
-            background-color: #e8e8eb;
+            background-color: #ffffff;
             border: solid #000000;
             /* border-radius: 10px; */
             overflow: scroll
@@ -58,7 +59,9 @@
             float: right;
             width: 85%;
             height: 70%;
-            background-image: url("https://www.goldsgym.jp/sites/all/modules/gg_banner/name_horizontal_grey.png");
+            background-image: url("../image/筋トレの美学.png") ;
+            background-color: #fff;
+            background-size:800px;
             background-repeat: no-repeat;
             background-position: center;
             border: solid #000000;
