--- a/Todo-app/public/css/weight-style.css
+++ b/Todo-app/public/css/weight-style.css
@@ -21,10 +21,10 @@ html,body {
     /* margin: 10px; */
     float: left;
     width: 15%;
-    height: 99%;
+    height: 99.9%;
     background-color: #ffffff;
     border: solid #000000;
-    /* border-radius: 10px; */
+    border-radius: 5px;
     overflow: scroll;
     list-style: none;
 }
